--- a/gameScreen.html
+++ b/gameScreen.html
@@ -27,7 +27,7 @@
                 <h2 class="score">Score: 0</h2>
             </div>
 
-            <div data-guess-grid class="guess-grid">
+            <div data-guess-grid class="guess-grid" onclick="enterGuessGrid()">
                 <div class="tile"></div>
                 <div class="tile"></div>
                 <div class="tile"></div>
